--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,7 @@ services:
     environment:
       # Optional: add env vars here if needed
       TZ: "America/New_York"
-    # volumes:
+    volumes:
       # Optional: mount content locally for testing/dev
-      # - ./content:/project/content:ro
-      # - ./themes:/project/themes:ro
+      - ./static:/project/static
 
